--- a/css/main.css
+++ b/css/main.css
@@ -21,11 +21,28 @@
     text-align: center;
 }
 
+#app_description{
+    font: "Impact";
+    font-size: 15px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+    margin-top: -15px; 
+}
+
 /* CONTENT */
+
+#search_box{
+    border: solid silver 1px;
+    padding: 5px;
+    margin: 1px;
+    box-shadow: 0px 0px 3px black;
+}
 
 #search_results{
     height: 500px;
-    border: solid black 2px;
+    border: solid silver 1px;
     padding: 5px;
-    margin: 5px 1px;
+    margin: 10px 1px;
+    box-shadow: 0px 0px 3px black;
 }
+
