Improving CSS III

--- a/css/main.css
+++ b/css/main.css
@@ -46,3 +46,9 @@
     box-shadow: 0px 0px 3px black;
 }
 
+.film_box{
+    border: solid rgb(212, 211, 211) 1px;
+    padding: 10px;
+    margin: 8px 2px;
+}
+
