--- a/css/main.css
+++ b/css/main.css
@@ -47,6 +47,7 @@
 }
 
 .film_box{
+    background: rgb(152, 188, 243);
     border: solid rgb(212, 211, 211) 1px;
     padding: 10px;
     margin: 8px 2px;
