--- a/css/main.css
+++ b/css/main.css
@@ -47,8 +47,11 @@
 }
 
 .film_box{
-    border: solid rgb(212, 211, 211) 1px;
+    border: solid rgb(4, 109, 122) 1px;
     padding: 10px;
     margin: 8px 2px;
+    border-radius: 25px;
+    background: #7bb3bb;
+    box-shadow: 0 0 3px rgb(8, 180, 129), 0 0 5px rgb(196, 233, 187);
 }
 
