Small change in the styles

--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@
     padding: 10px;
     margin: 8px 2px;
     border-radius: 25px;
-    background: #7bb3bb;
-    box-shadow: 0 0 3px rgb(8, 180, 129), 0 0 5px rgb(196, 233, 187);
+    background: #b2e6ee;
+    box-shadow: 0 0 3px rgb(114, 165, 150), 0 0 5px rgb(196, 233, 187);
 }
 
